fix: working on mobile view design

--- a/components/common/cardCheckbox/style.module.scss
+++ b/components/common/cardCheckbox/style.module.scss
@@ -137,11 +137,18 @@
     padding: 0 1rem;
     margin-bottom: 15px;
     font-weight: 600;
+    @include mobile{
+      padding: 0 12px;
+    }
 
     span {
       font-size: 14px;
       color: #e8b016;
       font-weight: 500;
+      @include mobile{
+        display: block;
+        margin-top: 3px;
+      }
     }
   }
 
@@ -150,6 +157,10 @@
     justify-content: space-between;
     margin-bottom: 15px;
     padding: 0 1rem;
+    @include mobile{
+      padding: 0 12px;
+      flex-wrap: wrap;
+    }
 
     .detailTxt {
       font-size: 12px;
@@ -157,15 +168,39 @@
       padding: 0;
       margin-bottom: 0px;
       font-weight: 500;
+      @include mobile{
+        width: 100%;
+        flex: 100%;
+        margin: 3px 0;
+      }
+      .iconXsView {
+        display: none;
+        @include mobile {
+          display: inline-block;
+          img {
+            width: 15px;
+            margin-right: 3px;
+            opacity: 0.6;
+          }
+        }
+      }
 
       &:nth-child(2) {
         text-align: center;
         border-left: 1px solid #707070;
         border-right: 1px solid #707070;
+        @include mobile{
+          border-right: none;
+          border-left: none;
+          text-align: left;
+        }
       }
 
       &:nth-child(3) {
         text-align: center;
+        @include mobile{
+          text-align: left;
+        }
       }
     }
   }
@@ -176,6 +211,9 @@
     font-weight: 600;
     padding: 0 1rem;
     margin-bottom: 15px;
+    @include mobile{
+      padding: 0 12px;
+    }
   }
 
   .dealer {
@@ -184,6 +222,9 @@
     color: #CBC6C6;
     margin-bottom: 0px;
     font-weight: 500;
+    @include mobile{
+      padding: 0 12px;
+    }
 
     span {
       font-size: 10px;
@@ -198,6 +239,10 @@
     text-decoration: underline;
     color: #F3F3F3;
     font-weight: 600;
+    @include mobile{
+      padding: 0 12px;
+      display: block;
+    }
   }
 
 }
@@ -208,6 +253,9 @@
   margin-bottom: 20px;
 
   .creDetails {
+    @include mobile{
+      margin: 0 10px;
+    }
     h3 {
       margin-bottom: 0;
       padding: 0 1rem;
@@ -223,11 +271,37 @@
       color: #CBC6C6;
       margin-bottom: 5px !important;
       font-weight: 500;
+      @include mobile{
+        border-bottom: 1px solid $gray-70;
+        padding-bottom: 6px;
+      }
+      &:last-child{
+        @include mobile{
+          border-bottom: none;
+          padding-bottom: 0;
+        }
+      }
 
       span {
         color: #F3F3F3;
         font-weight: 600;
         margin-left: 3px;
+        @include mobile{
+          font-weight: 500;
+          color: $gray-cb;
+        }
+      }
+      small{
+        font-size: 12px;
+        @include mobile{
+          display: none;
+        }
+      }
+      .userIcon{
+        display: none;
+        @include mobile{
+          display: inline-block;
+        }
       }
     }
   }
@@ -239,6 +313,10 @@
   align-items: center;
   gap: 0 7px;
   padding: 0.5rem 1rem 0 0rem;
+  @include mobile{
+    padding: 8px 0;
+    flex-wrap: wrap;
+  }
 
   .downloadBtn {
     min-height: 36px;
@@ -248,6 +326,11 @@
     background: transparent;
     border: 1px solid $gray-70;
     border-radius: 0;
+    @include mobile{
+      margin-left: 0;
+      width: 100%;
+      margin-bottom: 8px;
+    }
   }
 }
 
