--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -199,8 +199,19 @@ h6 {
 }
 
 // default White tab style
+
+.tabs-mobile-view{
+  @include mobile{
+    overflow-x: auto;
+  }
+}
 .default-tab-style {
   border: 1px solid $gray-70;
+  @include mobile{
+    white-space: nowrap;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+  }
 
   .nav-item {
     border-right: 1px solid $gray-70;
@@ -1217,5 +1228,12 @@ font-weight: 400;
 .flex-xs-column-reverse{
   @include mobile{
     flex-direction: column-reverse;
+  }
+}
+
+.custom-checkbox{
+  @include mobile{
+    display: flex;
+    align-items: center;
   }
 }
